--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Coming soon!</title>
+    <style>
+        img {
+            display: flex;
+            margin: 25% auto;
+        }
+    </style>
 </head>
 <body>
-    <img src="construction.gif" height="124" width="184" alt="">
+    <img src="construction.gif" height="124" width="184" alt="Under construction!">
 </body>
 </html>
