--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
                 <span>9/2020 - 2/2024</span>
             </div>
             <em>Brooks is a leading manufacturer of running shoes and apparel.</em>
-            <p>Care and feeding of brooksrunning.com - an international SFRA-based SFCC web application. Significant feature work is detailed on my <a href="https://www.linkedin.com/in/j-rogers">LinkedIn</a>.</p>
-            <ul>
+            <p class="print">Care and feeding of brooksrunning.com - an international SFRA-based SFCC web application. Significant site feature work is detailed on my <a href="https://tritium-anglaise.github.io">portfolio site</a> and <a href="https://www.linkedin.com/in/j-rogers">LinkedIn</a>.</p>
+            <p class="no-print">
+                Care and feeding of a SFRA-based SFCC web application. Significant feature work included: rules-based product badge refresh/rework, custom cart "size sampling" feature using TrueFit, Narvar SMS order notifications, extension of the site's popular, and very intricate, Shoe Finder, various site performance work which, in one instance, reduced product image sizes on detail pages by 2/3rds.
+            </p>
+            <p class="no-print">
+                Design and implementation of feature flag functionality to allow per-environment feature toggling for both client & server side. Work included a custom Business Manager extension (in React/Preact), supporting controller code, and a design/requirements review that allowed the company to end an unnecessary vendor contract, saving five-figures annually.
+            </p>
+            <p class="no-print">
+                Quickly developed a Friends & Family portal to replace the previous PHP-based iteration that had been accidentally deleted (yes, really). Technologies used: Node, Express, Postgres, Azure Functions/Application Services/Key Vault.
+            </p>
+            <p class="no-print">
+                Development and maintenance of Azure-based solution for generating and serving PDF/HTML return labels for Brooks' international sites. Originally written for DHL, but grew to support FedEx, PostNord, DPD, and others.
+            </p>
+            <ul class="print">
                 <li>Design and development of a custom Business Manager extension (with supporting controller & client-side code) to provide a dashboard to enable per-environment feature toggling.</li>
                 <li>Rapid development of Friends & Family portal (Node, Express, Postgres, Azure Functions/Application Services) which allow employees to self-service their participation in the popular program.</li>
                 <li>Creation of Azure-based solution for generating and serving return labels for DHL, FedEx, PostNord, and others.</li>
@@ -50,7 +62,7 @@
             <em>Build provided innovative technology solutions for CBRE, the world's largest commercial real estate company.</em>
             <p>Led a small team in the development of Hub, a site for discovering commercial spaces in San Francisco. The site featured a server-rendered React front-end and a Django/DRF backend using Postgres + PostGIS. Both apps ran as Docker containers in AWS/ECS. Developed reusable library for form validation & population that was used throughout the site.</p>
             Established patterns for
-            <ul class="bort">
+            <ul class="resume">
                  <li>state management using React's Hooks & Context, and</li>
                  <li>SCSS-assisted BEM naming conventions for styled components and coached the Hub team and wider office on their implementation.</li>
             </ul>
