--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,7 +19,8 @@
                 <ul style="margin-left: 1em;">
                     <li>rules-based product badge refresh/rework</li>
                     <li>custom cart "size sampling" feature using TrueFit (which you can see in the picture over there on the left)</li>
-                    <li>Narvar SMS order notifications, extension of the site's popular, and very intricate, <a
+                    <li>Narvar SMS order notifications</li>
+                    <li>extension of the site's popular, and very intricate, <a
                             href="https://brooksrunning.com/en_us/shoefinder" style="text-decoration: underline;">Shoe Finder</a></li>
                     <li>various site performance work which, in one instance, reduced product image sizes on detail pages by 2/3rds</li>
                     <li>Zendesk support site theme updates</li>
