--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <em>Kaiizen is an AI-forward real estate tech firm.</em>
             <p>Ground-up development of a <a href="https://apps.apple.com/us/app/kai-agent/id6751349906">React Native app for iOS</a> that is used to determine a property's renovation cost & timelines.</p>
             <p>
-                Development of a webapp, and associated tooling, that used a custom app serverwhich was used to facilitate off-market real estate transactions. Technologies: React, Typescript, Mapbox, Formik.
+                Using a custom app server, developed a webapp, and associated tooling, which was used to facilitate off-market real estate transactions. Technologies: React, Typescript, Mapbox, Formik.
             </p>
         </div>
         <div class="job">
